added an underline animation

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <img src="./pngwing.com.png" class="menu-icon"> 
             <nav>
                 <ul>
-                    <li><a><strong>CREATIVITY</strong></a></li>
-                    <li><a><strong>PASSION</strong></a></li>
-                    <li><a><strong>LOVE</strong></a></li>
-                    <li><a><strong>BODY AWARNESS</strong></a></li>
-                    <li><a><strong>BEAUTY</strong></a></li>
-                    <li><a><strong>FASHION</strong></a></li>
+                    <li><a class="hover-underline-animation"><strong>CREATIVITY</strong></a></li>
+                    <li><a class="hover-underline-animation"><strong>PASSION</strong></a></li>
+                    <li><a class="hover-underline-animation"><strong>LOVE</strong></a></li>
+                    <li><a class="hover-underline-animation"><strong>BODY AWARNESS</strong></a></li>
+                    <li><a class="hover-underline-animation"><strong>BEAUTY</strong></a></li>
+                    <li><a class="hover-underline-animation"><strong>FASHION</strong></a></li>
                 </ul>
             </nav> 
             <img src="./clipart365828.png" class="menu-icon"> 
